# Fall-2024-ENGR212-Python-Programming-Essentials

./: pyproject.toml
docs/: requirements.txt
