[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

python:
  install:
    - requirements: docs/requirements.txt
    # Install our python package before building the docs
    - method: pip
      path: .

[project]
name = "lumache"
authors = [{name = "Graziella", email = "graziella@lumache"}]
dynamic = ["version", "description"]
